--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
         </caption>
     <colgroup>
         <col>
-        <col style="width: 50%">
-        <col style="width: 50%">
+        <col style="width: 25%">
+        <col style="width: 10%">
+        <col style="width: 24px">
     </colgroup>
     <thead>
         <tr>
             <th>Blog</th>
-            <th>Type</th>
+            <th>Type</th>            
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -23,7 +25,10 @@
                 <a href="https://wp.uni-oldenburg.de/ism2021-fashiontextile-3" target="_blank">
                     Stitch By Stitch                </a>
             </td>
-            </tr>
+            <td>
+                Status group:
+                Fashion/Textile 3            </td>
+            <td></tr>
             <tr id="blog-5286">
             <td>
                 <input type="checkbox" name="ids[]" style="display: none" value="5286">
@@ -31,7 +36,10 @@
                 <a href="https://wp.uni-oldenburg.de/ism2021-energy-4" target="_blank">
                     Generic Energy AG                </a>
             </td>
-            /tr>
+            <td>
+                Status group:
+                Energy 4            </td>
+            <td></tr>
             <tr id="blog-5293">
             <td>
                 <input type="checkbox" name="ids[]" style="display: none" value="5293">
@@ -39,7 +47,10 @@
                 <a href="https://wp.uni-oldenburg.de/ism2021-tourism-1" target="_blank">
                     Seastainable®                </a>
             </td>
-            </tr>
+            <td>
+                Status group:
+                Tourism 1            </td>
+            <td></tr>
             <tr id="blog-5287">
             <td>
                 <input type="checkbox" name="ids[]" style="display: none" value="5287">
@@ -47,7 +58,10 @@
                 <a href="https://wp.uni-oldenburg.de/ism2021-mobility-1" target="_blank">
                     GoGreen                </a>
             </td>
-            </tr>
+            <td>
+                Status group:
+                Mobility 1            </td>
+            <td></tr>
             <tr id="blog-5281">
             <td>
                 <input type="checkbox" name="ids[]" style="display: none" value="5281">
@@ -55,7 +69,10 @@
                 <a href="https://wp.uni-oldenburg.de/ism2021-foodagriculture-4" target="_blank">
                     Alte Mühle - Jena                </a>
             </td>
-            </tr>
+            <td>
+                Status group:
+                Food/Agriculture 4            </td>
+            <td></tr>
             <tr id="blog-5294">
             <td>
                 <input type="checkbox" name="ids[]" style="display: none" value="5294">
@@ -63,7 +80,10 @@
                 <a href="https://wp.uni-oldenburg.de/ism2021-tourism-2" target="_blank">
                     GREEN VANTURE e.V.                </a>
             </td>
-            </tr>
+            <td>
+                Status group:
+                Tourism 2            </td>
+            <td></tr>
             <tr id="blog-5288">
             <td>
                 <input type="checkbox" name="ids[]" style="display: none" value="5288">
@@ -71,7 +91,10 @@
                 <a href="https://wp.uni-oldenburg.de/ism2021-mobility-2" target="_blank">
                     H20 Mobility                </a>
             </td>
-            </tr>
+            <td>
+                Status group:
+                Mobility 2            </td>
+            <td></tr>
             <tr id="blog-5280">
             <td>
                 <input type="checkbox" name="ids[]" style="display: none" value="5280">
@@ -79,7 +102,10 @@
                 <a href="https://wp.uni-oldenburg.de/ism2021-foodagriculture-3" target="_blank">
                     GreenDependent                </a>
             </td>
-            </tr>
+            <td>
+                Status group:
+                Food/Agriculture 3            </td>
+            <td></tr>
             <tr id="blog-5285">
             <td>
                 <input type="checkbox" name="ids[]" style="display: none" value="5285">
@@ -87,7 +113,10 @@
                 <a href="https://wp.uni-oldenburg.de/ism2021-energy-3" target="_blank">
                     Future Homes AG                </a>
             </td>
-            </tr>
+            <td>
+                Status group:
+                Energy 3            </td>
+            <td></tr>
             <tr id="blog-5292">
             <td>
                 <input type="checkbox" name="ids[]" style="display: none" value="5292">
@@ -95,7 +124,10 @@
                 <a href="https://wp.uni-oldenburg.de/ism2021-fashiontextile-4" target="_blank">
                     Transparency GmbH                </a>
             </td>
-            </tr>
+            <td>
+                Status group:
+                Fashion/Textile 4            </td>
+            <td></tr>
             <tr id="blog-5295">
             <td>
                 <input type="checkbox" name="ids[]" style="display: none" value="5295">
@@ -103,7 +135,10 @@
                 <a href="https://wp.uni-oldenburg.de/ism2021-tourism-3" target="_blank">
                     CO₂NTRIBUTE                </a>
             </td>
-            </tr>
+            <td>
+                Status group:
+                Tourism 3            </td>
+            <td></tr>
             <tr id="blog-5282">
             <td>
                 <input type="checkbox" name="ids[]" style="display: none" value="5282">
@@ -111,7 +146,10 @@
                 <a href="https://wp.uni-oldenburg.de/ism2021-foodagriculture-5" target="_blank">
                     FoodPrint®                </a>
             </td>
-            </tr>
+            <td>
+                Status group:
+                Food/Agriculture 5            </td>
+            <td></tr>
             <tr id="blog-5297">
             <td>
                 <input type="checkbox" name="ids[]" style="display: none" value="5297">
@@ -119,7 +157,10 @@
                 <a href="https://wp.uni-oldenburg.de/ism2021-social-entrepreneurship-1" target="_blank">
                     Mounteverent                </a>
             </td>
-            </tr>
+            <td>
+                Status group:
+                Social Entrepreneurship 1            </td>
+            <td></tr>
             <tr id="blog-5299">
             <td>
                 <input type="checkbox" name="ids[]" style="display: none" value="5299">
@@ -127,7 +168,10 @@
                 <a href="https://wp.uni-oldenburg.de/ism2021-finance-1" target="_blank">
                     aware.                </a>
             </td>
-            </tr>
+            <td>
+                Status group:
+                Finance 1            </td>
+            <td></tr>
             <tr id="blog-5279">
             <td>
                 <input type="checkbox" name="ids[]" style="display: none" value="5279">
@@ -135,7 +179,10 @@
                 <a href="https://wp.uni-oldenburg.de/ism2021-foodagriculture-2" target="_blank">
                     Nordhagel GmbH                </a>
             </td>
-            </tr>
+            <td>
+                Status group:
+                Food/Agriculture 2            </td>
+            <td></tr>
             <tr id="blog-5290">
             <td>
                 <input type="checkbox" name="ids[]" style="display: none" value="5290">
@@ -143,6 +190,10 @@
                 <a href="https://wp.uni-oldenburg.de/ism2021-fashiontextile-1" target="_blank">
                     The Basic Capsule                </a>
             </td>
+            <td>
+                Status group:
+                Fashion/Textile 1            </td>
+            <td>        
             </tr>
             <tr id="blog-5354">
             <td>
@@ -151,6 +202,9 @@
                 <a href="https://wp.uni-oldenburg.de/ism2021-test-blog" target="_blank">
                     ISM2021 - Gruppe "Test-Blog"                </a>
             </td>
+            <td>
+                Status group:
+                Test-Blog            </td>
             </tr>
             <tr id="blog-5296">
             <td>
@@ -158,7 +212,10 @@
 
                 <a href="https://wp.uni-oldenburg.de/ism2021-tourism-4" target="_blank">
                     Re-Hostel                </a>
-            </td>            
+            </td>
+            <td>
+                Status group:
+                Tourism 4            </td>
             </tr>
             <tr id="blog-5289">
             <td>
@@ -167,13 +224,20 @@
                 <a href="https://wp.uni-oldenburg.de/ism2021-mobility-3" target="_blank">
                     Sustainable Urban Mobility – 4 all                </a>
             </td>
+            <td>
+                Status group:
+                Mobility 3            </td>
+            <td></tr>
             <tr id="blog-5283">
             <td>
                 <input type="checkbox" name="ids[]" style="display: none" value="5283">
 
                 <a href="https://wp.uni-oldenburg.de/ism2021-energy-1" target="_blank">
                     AlgaeE                </a>
-            </td>            
+            </td>
+            <td>
+                Status group:
+                Energy 1            </td>
             </tr>
         </tbody>
 </table>
