--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
             Version: 19/10/22 17:01:00        </div>
         </caption>
     <colgroup>
-        <col>
-        <col style="width: 25%">
+        <col style="width: 24px">
+        <col style="width: 30%">
         <col style="width: 10%">
+        <col style="width: 8%">
         <col style="width: 24px">
     </colgroup>
     <thead>
@@ -28,7 +29,12 @@
             <td>
                 Status group:
                 Fashion/Textile 3            </td>
-            <td></tr>
+            <td>
+                <td>
+                    <a href="1.pdf" target="_blank">
+                        <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+                </td>
+            </tr>
             <tr id="blog-5286">
             <td>
                 <input type="checkbox" name="ids[]" style="display: none" value="5286">
@@ -39,7 +45,10 @@
             <td>
                 Status group:
                 Energy 4            </td>
-            <td></tr>
+            <td><td>
+                <a href="2.pdf" target="_blank">
+                    <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+            </td></tr>
             <tr id="blog-5293">
             <td>
                 <input type="checkbox" name="ids[]" style="display: none" value="5293">
@@ -50,7 +59,10 @@
             <td>
                 Status group:
                 Tourism 1            </td>
-            <td></tr>
+            <td><td>
+                <a href="3.pdf" target="_blank">
+                    <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+            </td></tr>
             <tr id="blog-5287">
             <td>
                 <input type="checkbox" name="ids[]" style="display: none" value="5287">
@@ -61,7 +73,10 @@
             <td>
                 Status group:
                 Mobility 1            </td>
-            <td></tr>
+            <td><td>
+                <a href="4.pdf" target="_blank">
+                    <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+            </td></tr>
             <tr id="blog-5281">
             <td>
                 <input type="checkbox" name="ids[]" style="display: none" value="5281">
@@ -72,7 +87,10 @@
             <td>
                 Status group:
                 Food/Agriculture 4            </td>
-            <td></tr>
+            <td><td>
+                <a href="5.pdf" target="_blank">
+                    <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+            </td></tr>
             <tr id="blog-5294">
             <td>
                 <input type="checkbox" name="ids[]" style="display: none" value="5294">
@@ -83,7 +101,10 @@
             <td>
                 Status group:
                 Tourism 2            </td>
-            <td></tr>
+            <td><td>
+                <a href="6.pdf" target="_blank">
+                    <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+            </td></tr>
             <tr id="blog-5288">
             <td>
                 <input type="checkbox" name="ids[]" style="display: none" value="5288">
@@ -94,7 +115,10 @@
             <td>
                 Status group:
                 Mobility 2            </td>
-            <td></tr>
+            <td><td>
+                <a href="7.pdf" target="_blank">
+                    <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+            </td></tr>
             <tr id="blog-5280">
             <td>
                 <input type="checkbox" name="ids[]" style="display: none" value="5280">
@@ -105,7 +129,10 @@
             <td>
                 Status group:
                 Food/Agriculture 3            </td>
-            <td></tr>
+            <td><td>
+                <a href="8.pdf" target="_blank">
+                    <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+            </td></tr>
             <tr id="blog-5285">
             <td>
                 <input type="checkbox" name="ids[]" style="display: none" value="5285">
@@ -116,7 +143,10 @@
             <td>
                 Status group:
                 Energy 3            </td>
-            <td></tr>
+            <td><td>
+                <a href="9.pdf" target="_blank">
+                    <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+            </td></tr>
             <tr id="blog-5292">
             <td>
                 <input type="checkbox" name="ids[]" style="display: none" value="5292">
@@ -127,7 +157,10 @@
             <td>
                 Status group:
                 Fashion/Textile 4            </td>
-            <td></tr>
+            <td><td>
+                <a href="10.pdf" target="_blank">
+                    <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+            </td></tr>
             <tr id="blog-5295">
             <td>
                 <input type="checkbox" name="ids[]" style="display: none" value="5295">
@@ -138,7 +171,10 @@
             <td>
                 Status group:
                 Tourism 3            </td>
-            <td></tr>
+            <td><td>
+                <a href="11.pdf" target="_blank">
+                    <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+            </td></tr>
             <tr id="blog-5282">
             <td>
                 <input type="checkbox" name="ids[]" style="display: none" value="5282">
@@ -149,7 +185,10 @@
             <td>
                 Status group:
                 Food/Agriculture 5            </td>
-            <td></tr>
+            <td><td>
+                <a href="12.pdf" target="_blank">
+                    <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+            </td></tr>
             <tr id="blog-5297">
             <td>
                 <input type="checkbox" name="ids[]" style="display: none" value="5297">
@@ -160,7 +199,10 @@
             <td>
                 Status group:
                 Social Entrepreneurship 1            </td>
-            <td></tr>
+            <td><td>
+                <a href="13.pdf" target="_blank">
+                    <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+            </td></tr>
             <tr id="blog-5299">
             <td>
                 <input type="checkbox" name="ids[]" style="display: none" value="5299">
@@ -170,8 +212,11 @@
             </td>
             <td>
                 Status group:
-                Finance 1            </td>
-            <td></tr>
+                Finance 1            </td><td></td>
+            <td>
+                <a href="14.pdf" target="_blank">
+                    <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+            </td></tr>
             <tr id="blog-5279">
             <td>
                 <input type="checkbox" name="ids[]" style="display: none" value="5279">
@@ -182,7 +227,10 @@
             <td>
                 Status group:
                 Food/Agriculture 2            </td>
-            <td></tr>
+            <td><td>
+                <a href="15.pdf" target="_blank">
+                    <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+            </td></tr>
             <tr id="blog-5290">
             <td>
                 <input type="checkbox" name="ids[]" style="display: none" value="5290">
@@ -192,8 +240,11 @@
             </td>
             <td>
                 Status group:
-                Fashion/Textile 1            </td>
-            <td>        
+                Fashion/Textile 1            </td><td></td>
+                <td>
+                    <a href="16.pdf" target="_blank">
+                        <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+                </td>        
             </tr>
             <tr id="blog-5354">
             <td>
@@ -204,7 +255,10 @@
             </td>
             <td>
                 Status group:
-                Test-Blog            </td>
+                Test-Blog            </td><td></td><td>
+                    <a href="17.pdf" target="_blank">
+                        <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+                </td>
             </tr>
             <tr id="blog-5296">
             <td>
@@ -215,7 +269,10 @@
             </td>
             <td>
                 Status group:
-                Tourism 4            </td>
+                Tourism 4            </td><td></td><td>
+                    <a href="18.pdf" target="_blank">
+                        <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+                </td>
             </tr>
             <tr id="blog-5289">
             <td>
@@ -227,7 +284,10 @@
             <td>
                 Status group:
                 Mobility 3            </td>
-            <td></tr>
+                <td></td><td>
+                    <a href="19.pdf" target="_blank">
+                        <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+                </td></tr>
             <tr id="blog-5283">
             <td>
                 <input type="checkbox" name="ids[]" style="display: none" value="5283">
@@ -237,7 +297,10 @@
             </td>
             <td>
                 Status group:
-                Energy 1            </td>
+                Energy 1            </td><td><td>
+                    <a href="20.pdf" target="_blank">
+                        <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+                </td>
             </tr>
         </tbody>
 </table>
