--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <table class="default " id="blog-list">
     <caption>
-        Existing blogs            <div class="actions">
+        PICS Blogs            <div class="actions">
             Version: 19/10/22 17:01:00        </div>
         </caption>
     <colgroup>
@@ -32,7 +32,7 @@
             <td>
                 <td>
                     <a href="1.pdf" target="_blank">
-                        <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+                        <img src="pdf.png" alt="Fashion/Textile 3" title="Fashion/Textile 3" width="24" height="24">
                 </td>
             </tr>
             <tr id="blog-5286">
@@ -47,7 +47,7 @@
                 Energy 4            </td>
             <td><td>
                 <a href="2.pdf" target="_blank">
-                    <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+                    <img src="pdf.png" alt="Energy 4" title="Energy 4" width="24" height="24">
             </td></tr>
             <tr id="blog-5293">
             <td>
@@ -61,7 +61,7 @@
                 Tourism 1            </td>
             <td><td>
                 <a href="3.pdf" target="_blank">
-                    <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+                    <img src="pdf.png" alt="Tourism 1" title="Tourism 1" width="24" height="24">
             </td></tr>
             <tr id="blog-5287">
             <td>
@@ -75,7 +75,7 @@
                 Mobility 1            </td>
             <td><td>
                 <a href="4.pdf" target="_blank">
-                    <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+                    <img src="pdf.png" alt="Mobility 1" title="Mobility 1" width="24" height="24">
             </td></tr>
             <tr id="blog-5281">
             <td>
@@ -89,7 +89,7 @@
                 Food/Agriculture 4            </td>
             <td><td>
                 <a href="5.pdf" target="_blank">
-                    <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+                    <img src="pdf.png" alt="Food/Agriculture 4" title="Food/Agriculture 4" width="24" height="24">
             </td></tr>
             <tr id="blog-5294">
             <td>
@@ -103,7 +103,7 @@
                 Tourism 2            </td>
             <td><td>
                 <a href="6.pdf" target="_blank">
-                    <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+                    <img src="pdf.png" alt="Tourism 2" title="Tourism 2" width="24" height="24">
             </td></tr>
             <tr id="blog-5288">
             <td>
@@ -117,7 +117,7 @@
                 Mobility 2            </td>
             <td><td>
                 <a href="7.pdf" target="_blank">
-                    <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+                    <img src="pdf.png" alt="Mobility 2" title="Mobility 2" width="24" height="24">
             </td></tr>
             <tr id="blog-5280">
             <td>
@@ -131,7 +131,10 @@
                 Food/Agriculture 3            </td>
             <td><td>
                 <a href="8.pdf" target="_blank">
-                    <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+                    <img src="pdf.png" alt="Food/Agriculture 3" title="Food/Agriculture 3" width="24" height="24">
+            </td><td>
+                <a href="8_2.pdf" target="_blank">
+                    <img src="pdf.png" alt="Food/Agriculture 3" title="Food/Agriculture 3" width="24" height="24">
             </td></tr>
             <tr id="blog-5285">
             <td>
@@ -145,7 +148,7 @@
                 Energy 3            </td>
             <td><td>
                 <a href="9.pdf" target="_blank">
-                    <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+                    <img src="pdf.png" alt="Energy 3" title="Energy 3" width="24" height="24">
             </td></tr>
             <tr id="blog-5292">
             <td>
@@ -159,7 +162,7 @@
                 Fashion/Textile 4            </td>
             <td><td>
                 <a href="10.pdf" target="_blank">
-                    <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+                    <img src="pdf.png" alt="Fashion/Textile 4" title="Fashion/Textile 4" width="24" height="24">
             </td></tr>
             <tr id="blog-5295">
             <td>
@@ -173,7 +176,7 @@
                 Tourism 3            </td>
             <td><td>
                 <a href="11.pdf" target="_blank">
-                    <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+                    <img src="pdf.png" alt="Tourism 3" title="Tourism 3" width="24" height="24">
             </td></tr>
             <tr id="blog-5282">
             <td>
@@ -187,7 +190,7 @@
                 Food/Agriculture 5            </td>
             <td><td>
                 <a href="12.pdf" target="_blank">
-                    <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+                    <img src="pdf.png" alt="Food/Agriculture 5" title="Food/Agriculture 5" width="24" height="24">
             </td></tr>
             <tr id="blog-5297">
             <td>
@@ -201,7 +204,7 @@
                 Social Entrepreneurship 1            </td>
             <td><td>
                 <a href="13.pdf" target="_blank">
-                    <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+                    <img src="pdf.png" alt="Social Entrepreneurship 1" title="Social Entrepreneurship 1" width="24" height="24">
             </td></tr>
             <tr id="blog-5299">
             <td>
@@ -215,7 +218,7 @@
                 Finance 1            </td><td></td>
             <td>
                 <a href="14.pdf" target="_blank">
-                    <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+                    <img src="pdf.png" alt="Finance 1" title="Finance 1" width="24" height="24">
             </td></tr>
             <tr id="blog-5279">
             <td>
@@ -229,7 +232,7 @@
                 Food/Agriculture 2            </td>
             <td><td>
                 <a href="15.pdf" target="_blank">
-                    <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+                    <img src="pdf.png" alt="Food/Agriculture 2" title="Food/Agriculture 2" width="24" height="24">
             </td></tr>
             <tr id="blog-5290">
             <td>
@@ -243,7 +246,7 @@
                 Fashion/Textile 1            </td><td></td>
                 <td>
                     <a href="16.pdf" target="_blank">
-                        <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+                        <img src="pdf.png" alt="Fashion/Textile 1" title="Fashion/Textile 1" width="24" height="24">
                 </td>        
             </tr>
             <tr id="blog-5354">
@@ -257,7 +260,7 @@
                 Status group:
                 Test-Blog            </td><td></td><td>
                     <a href="17.pdf" target="_blank">
-                        <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+                        <img src="pdf.png" alt="Test-Blog" title="Test-Blog" width="24" height="24">
                 </td>
             </tr>
             <tr id="blog-5296">
@@ -271,7 +274,7 @@
                 Status group:
                 Tourism 4            </td><td></td><td>
                     <a href="18.pdf" target="_blank">
-                        <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+                        <img src="pdf.png" alt="Tourism 4" title="Tourism 4" width="24" height="24">
                 </td>
             </tr>
             <tr id="blog-5289">
@@ -286,7 +289,7 @@
                 Mobility 3            </td>
                 <td></td><td>
                     <a href="19.pdf" target="_blank">
-                        <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+                        <img src="pdf.png" alt="Mobility 3" title="Mobility 3" width="24" height="24">
                 </td></tr>
             <tr id="blog-5283">
             <td>
@@ -299,7 +302,7 @@
                 Status group:
                 Energy 1            </td><td><td>
                     <a href="20.pdf" target="_blank">
-                        <img src="pdf.png" alt="1.pdf" title="1.pdf" width="24" height="24">
+                        <img src="pdf.png" alt="Energy 1" title="Energy 1" width="24" height="24">
                 </td>
             </tr>
         </tbody>
